# django-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  result
.forgejo/workflows/: build.yaml  check.yaml
django-rs-macro/: Cargo.toml
django-rs-macro/src/: lib.rs
examples/: Cargo.toml
examples/serde/: Cargo.toml  test.db
examples/serde/src/: main.rs  test.db
examples/test-client/: Cargo.toml
examples/test-client/src/: main.rs
nix/: dependencies.nix  pkg.nix
src/: lib.rs  main.rs
src/logstrategy/: definition.rs
src/logstrategy/default_strategies/: tracing_strategy.rs
src/models/: definition.rs  mod.rs
src/models/column/: create.rs  definition.rs  from.rs  mod.rs  modify.rs  serializer.rs
src/models/save/: definition.rs
src/models/search/: definition.rs  from.rs  mod.rs
src/models/traits/: from_iter.rs  mod.rs  model.rs  save_data.rs
src/server/: definition.rs  error.rs  mod.rs
src/server/database_strategy/: definition.rs
src/server/database_tasks/: get_task.rs  mod.rs  remove_task.rs  save_task.rs
src/task/: definition.rs
src/taskhandler/: definition.rs
src/taskrunnable/: definition.rs
src/tasks/: mod.rs
src/tasks/logstrategy/: definition.rs  mod.rs
src/tasks/queueitem/: definition.rs
src/tasks/task/: definition.rs
src/tasks/taskhandler/: definition.rs  error.rs  main_loop.rs  mod.rs  shutdown.rs  spawn_task.rs  spawn_task_long_running.rs  wait_until_done.rs
src/tasks/taskref/: definition.rs
src/tests/: example.rs  mod.rs  sqlite.rs
src/worker/: definition.rs
test-client/: Cargo.toml
test-client/src/: main.rs
(+21 files in other folders)
