[package]
name = "django-rs"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["django-rs-macro", "examples/serde", "examples/test-client"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
itertools = "0.14.0"
rand = "0.10.1"
rusqlite = "0.39.0"
thiserror = "2.0.18"
tracing = "0.1.44"
uuid = { version = "1.0", features = ["v4"] }
django-rs-macro = { path = "./django-rs-macro" }
r2d2_sqlite = "0.34.0"
r2d2 = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "~3"
